[package]
name = "kernel_sync"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = "0.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
cfg-if = "1.0.0"
[target.'cfg(all(target_os = "none", target_arch = "riscv64"))'.dependencies]
riscv = { version = "0.7", features = ["inline-asm"] }
